--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "lz-string": "1.5.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
